--- a/app/style/base.less
+++ b/app/style/base.less
@@ -25,7 +25,7 @@ body {
 .effect #aside-container,
 .effect .navbar-brand,
 .effect .navbar-content,
-.effect .navbar-header:before, 
+.effect .navbar-header:before,
 .mainnav-container,
 .ant-menu-dark.ant-menu-inline,
 .left-contant,
@@ -66,7 +66,7 @@ body {
     &:after{ display: none;}
     .anticon{ font-size: 10px; width: 10px; height: 10px; margin:-4px 16px 0 0; transition: transform .3s ease;}
   }
-  .ant-menu-sub{ 
+  .ant-menu-sub{
     .anticon{ font-size: @font-size-lg; margin:0 @space-big 0 0; color: #fff;}
   }
   .ant-menu-submenu-open.ant-menu-submenu-inline .ant-menu-submenu-title .anticon{ transform: rotate(180deg) scale(1); }
@@ -125,7 +125,7 @@ body {
 /*login end*/
 /*welcome end*/
 .welcome{  position: absolute; height: 100%; width: 100%; left: 0px; top:0px;
-  .content {background: url(../images/leftBg.jpg)  no-repeat center;background-size: cover; background-clip: border-box; height: 100%; width: 100%; text-align: center;
+  .content {background-clip: border-box; height: 100%; width: 100%; text-align: center;
     .title{ padding-top: 150px; color: #fff;}
   }
 }
